src/test/ui/error-codes/E0184.stderr
error[E0184]: the trait `Copy` may not be implemented for this type; the type has a destructor
  --> $DIR/E0184.rs:11:10
   |
11 | #[derive(Copy)] //~ ERROR E0184
   |          ^^^^ Copy not allowed on types with destructors

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0184"
